CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Latest CVS

AntPublisher:
----------------------
* Will now pass the property "thisbuildsuccessful" to the ant script.

controlpanel.jsp:
----------------------
* Provide direct link to project jmx page (CC-204). Patch by Tim Shadel

contrib:
----------------------
* Add support for distributed building (CC-137). Submitted by Jeff Ramsdale, Patches by Dan Rollo
* Add RpmPackager for creating CruiseControl RPM (CC-154). Submitted by Julian Simpson.

CMSynergy:
----------------------
* Added options reconfigure, ignoreWorkarea, language, and country attributes (CC-179). Patch by Robert J. Smith

cruisecontrol.sh:
----------------------
* Execute java from JAVA_HOME. Patch by Martin Jaeger.

CVS:
----------------------
* Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------
* Now accepts <alert> elements to notify users of modifications in files matching a regexp (CC-120). Patch by Eric Spiegelberg

FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified

index.jsp:
----------------------
* Use rounded corners on the right of the page (CC-113). Patch by Mark Doliner